Error-prone is too slow